--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
     <div class="container">
         <div class="top">
-            <div class="name">London,GB</div>
+            <div class="name"</div>
             <div class="searchBox">
                 <input class="search" type="text" placeholder="search for city...">
             </div>
         </div>
-        <div class="date">2020/10/october</div>
+        <div class="date"></div>
         <div class="bottom">
             <div class="wicon"><img class="icon" src="#" alt="icon temp"></div>
-            <div class="temp">30‎ <span>°C</span> </div>
-            <div class="dec">a few cloud</div>
-            <div class="min-max">27‎°C / 35‎°C</div>
+            <div class="temp"> <span></span> </div>
+            <div class="dec"></div>
+            <div class="min-max"></div>
         </div>
     </div>
     
